--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
       <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
   <% end %>
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+  <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
 </body>
 </html>
 
