--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
   <% end %>
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
+  <%= link_to "Sign in with LinkedIn", user_omniauth_authorize_path(:linkedin) %>
 </body>
 </html>
 
