--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
   <%= link_to "Sign in with LinkedIn", user_omniauth_authorize_path(:linkedin) %>
+  <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %>
 </body>
 </html>
 
