creado link para inicio de sesion con github

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
   <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
   <%= link_to "Sign in with LinkedIn", user_omniauth_authorize_path(:linkedin) %>
   <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %>
+  <%= link_to "Sign in with GitHub", user_omniauth_authorize_path(:github) %>
 </body>
 </html>
 
